--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
     ports:
       - "5000:5000"
     environment:
+      - FLASK_APP=app.py
       - FLASK_ENV=development
       - SQLALCHEMY_DATABASE_URI=postgresql://postgres:admin123@db:5432/inventory_db
     depends_on:
