--- a/k8s/monitoring/grafana/deployment.yaml
+++ b/k8s/monitoring/grafana/deployment.yaml
@@ -18,3 +18,10 @@ spec:
           image: grafana/grafana:latest
           ports:
             - containerPort: 3000
+          volumeMounts:
+            - name: grafana-storage
+              mountPath: /var/lib/grafana
+      volumes:
+        - name: grafana-storage
+          persistentVolumeClaim:
+            claimName: grafana-pvc
