--- a/k8s/monitoring/prometheus/configmap.yaml
+++ b/k8s/monitoring/prometheus/configmap.yaml
@@ -15,5 +15,6 @@ data:
         static_configs:
           - targets: ['node-exporter:9100']
       - job_name: 'flask-backend'
+        metrics_path: /metrics
         static_configs:
           - targets: ['backend.default.svc.cluster.local:5000']
