--- a/k8s/monitoring/prometheus/configmap.yaml
+++ b/k8s/monitoring/prometheus/configmap.yaml
@@ -7,6 +7,10 @@ data:
   prometheus.yml: |
     global:
       scrape_interval: 15s
+
+    rule_files:
+      - /etc/prometheus/rules/recording.rules.yml
+
     scrape_configs:
       - job_name: 'prometheus'
         static_configs:
