--- a/k8s/monitoring/prometheus/configmap.yaml
+++ b/k8s/monitoring/prometheus/configmap.yaml
@@ -10,14 +10,17 @@ data:
 
     rule_files:
       - /etc/prometheus/rules/recording.rules.yml
+      - /etc/prometheus/rules/alerting-rules.yml
 
     scrape_configs:
       - job_name: 'prometheus'
         static_configs:
           - targets: ['localhost:9090']
+
       - job_name: 'node-exporter'
         static_configs:
           - targets: ['node-exporter:9100']
+
       - job_name: 'flask-backend'
         metrics_path: /metrics
         static_configs:
