--- a/k8s/monitoring/prometheus/recording.rules.yaml
+++ b/k8s/monitoring/prometheus/recording.rules.yaml
@@ -3,7 +3,7 @@ groups:
     interval: 30s
     rules:
       - record: http_requests_per_minute
-        expr: increase(flask_http_request_total[1m])
+        expr: sum(rate(flask_http_request_total[1m]))
 
       - record: backend_average_response_time
         expr: sum(rate(flask_http_request_duration_seconds_sum[1m]))
